--- a/106/index.html
+++ b/106/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title></title>
+<title>泰國觀光旅遊資訊</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <style type="text/css">
 img {
@@ -22,11 +22,15 @@ p {
 	color:#333 ;
 	margin:0;
 }
+body {
+	background-color: #993300;
+}
 </style>
+<meta name="keywords" content="泰國,曼谷,四面佛" />
 </head>
-<body bgcolor="#FFFFFF">
+<body>
 <!-- Save for Web Slices (Untitled-1.psd) -->
-<table width="981" border="0" cellpadding="0" cellspacing="0" id="Table_01">
+<table width="981" border="0" align="center" cellpadding="0" cellspacing="0" id="Table_01">
 	<tr>
 		<td colspan="8">
 			<img id="index_01" src="images/index_01.jpg" width="980" height="489" alt="" /></td>
@@ -44,7 +48,7 @@ p {
 			<img id="index_05" src="images/index_05.jpg" width="123" height="41" alt="" /></td>
 		<td>
 			<img id="index_06" src="images/index_06.jpg" width="122" height="41" alt="" /></td>
-		<td colspan="2"><img src="images/index_07.jpg" alt="" name="index_07" width="196" height="41" id="index_07" /></td>
+		<td colspan="2"><a href="http://WWW.tattpe.org.tw//Main/Main.aspx"><img src="images/index_07.jpg" alt="" name="index_07" width="196" height="41" id="index_07" /></a></td>
 		<td>
 			<img src="images/spacer.gif" width="1" height="41" alt="" /></td>
 	</tr>
@@ -63,7 +67,9 @@ p {
 			<img src="images/spacer.gif" width="1" height="13" alt="" /></td>
 	</tr>
 	<tr>
-		<td colspan="5" valign="top" bgcolor="#FFFFFF"></td>
+		<td colspan="5" valign="top" bgcolor="#FFFFFF"><h2>氣候<br />
+	    </h2>
+        <h2>泰國大部分地區屬於熱帶季風氣候。常年溫度不下攝氏18℃，平均年降水量約1000毫米。11月至2月受較涼的東北季候風影響比較乾燥，3月到5月氣溫最高，可達攝氏40-42℃，7月至9月受西南季候風影響，是雨季。10月至12月偶有熱帶氣旋從南海經過中南半島吹襲泰國東部，但在暹羅灣形成的熱帶氣旋為數甚少且弱。</h2></td>
 		<td rowspan="7">
 			<img id="index_12" src="images/index_12.jpg" width="75" height="631" alt="" /></td>
 		<td>
@@ -76,7 +82,9 @@ p {
 			<img src="images/spacer.gif" width="1" height="36" alt="" /></td>
 	</tr>
 	<tr>
-		<td colspan="5" valign="top" bgcolor="#FFFFFF"></td>
+		<td colspan="5" valign="top" bgcolor="#FFFFFF"><h2>宗教<br />
+	    </h2>
+        <h2>泰國是世界上的佛教強國之一，大多數泰國人信奉作為國教的上座部佛教（部派佛教的一個分支），佛教徒佔全國人口95%以上。佛教對日常生活有非常強烈的影響。長老非常受人們尊敬。無論在城市還是鄉村，寺廟都是社會生活和宗教生活的中心。禪是佛教最普及的方面之一，有無數泰國人定期坐禪以提升內心的平靜和愉快。遊客也可以在曼谷的幾個中心或者國家的其他地方學習坐禪的基本原則。</h2></td>
 		<td>
 			<img src="images/spacer.gif" width="1" height="177" alt="" /></td>
 	</tr>
@@ -87,7 +95,10 @@ p {
 			<img src="images/spacer.gif" width="1" height="37" alt="" /></td>
 	</tr>
 	<tr>
-		<td colspan="5" valign="top" bgcolor="#FFFFFF"></td>
+		<td colspan="5" valign="top" bgcolor="#FFFFFF"><h2>飲食<br />
+		  </h2>
+		  <h2>主條目：泰國菜<br />
+	    泰國菜講究酸、辣、鹹、甜、苦五味的互相平衡，通常以鹹、酸、辣為主，而帶著一點甜，而苦味則隱隱約約在背後。在不同地區之間，飲食口味及偏好稍有差異。主要分成四大菜系，各種菜系都有不同特色。</h2></td>
 		<td>
 			<img src="images/spacer.gif" width="1" height="173" alt="" /></td>
 	</tr>
